--- a/src/common/AppHeader.css
+++ b/src/common/AppHeader.css
@@ -35,7 +35,7 @@
     vertical-align: middle;
     padding-left: 15px;
     padding-right: 15px;
-    color: rgba(0,0,0,0.65);
+    color: rgba(0, 0, 0, 0.65);
 }
 
 .app-nav ul li a:hover {
