--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ a:hover {
   padding: 0 20px;
   font-size: 14px;
   border-radius: 4px;
-  height: 45px;
+  /*height: 45px;*/
   line-height: 45px;
   -webkit-user-select: none;
   -moz-user-select: none;
