--- a/src/productBrowser/ProductBrowser.css
+++ b/src/productBrowser/ProductBrowser.css
@@ -1,10 +1,23 @@
 .browser-container {
     float: left;
-    width: 50%;
+    width: 45%;
     height: 880px;
     min-width: 400px;
     margin-left: 5%;
     margin-top: 1%;
+    margin-bottom: 30px;
+    padding: 40px;
+    background-color: black;
+}
+
+.recent-products-container {
+    float: left;
+    width: 40%;
+    height: 880px;
+    min-width: 400px;
+    margin-left: 5%;
+    margin-top: 1%;
+    margin-bottom: 15px;
     padding: 40px;
     background-color: black;
 }
@@ -32,11 +45,23 @@
     color: white;
 }
 
+#recent-products-label {
+    font-size: 1.5em;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: white;
+}
+
 #search-button {
     color: white;
 }
 
 .search-container {
+    height: 90%;
+}
+
+.results-container {
     height: 90%;
 }
 
