--- a/src/user/profile/Profile.css
+++ b/src/user/profile/Profile.css
@@ -1,5 +1,6 @@
 .profile-container {
     padding-top: 30px;
+    text-align: center;
 }
 
 .profile-info {
@@ -18,6 +19,24 @@
 
 .profile-info .profile-email {
     font-weight: 400;
+}
+
+.user-data {
+    text-align: left;
+    margin: 10px;
+}
+
+.profile-content {
+    background: #fff;
+    box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
+    border-radius: 2px;
+    width: 70%;
+    display: inline-block;
+    margin-top: 30px;
+    vertical-align: middle;
+    position: relative;
+    padding: 35px 20px;
+    text-align: center;
 }
 
 .text-avatar {
