--- a/src/diary/Diary.css
+++ b/src/diary/Diary.css
@@ -3,6 +3,14 @@
     width: 50%;
 }
 
+.summary-container {
+    margin: 50px;
+    width: 50%;
+    text-align: center;
+    align-self: center;
+    position: relative;
+}
+
 .diary-content {
     background: #fff;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
@@ -18,6 +26,12 @@
     margin-right: 10px;
 }
 
+
+.datepicker-container {
+    align-self: center;
+    align-content: center;
+}
+
 .child_div_1 {
     width: 1200px;
     height: 900px;
@@ -30,4 +44,5 @@
 .card-container {
     margin-left: 5%;
     width: 80%;
+    border: 2px solid #000000;
 }
