--- a/src/diary/FoodStatCards.css
+++ b/src/diary/FoodStatCards.css
@@ -1,5 +1,9 @@
 .site-statistic-demo-card {
     background: #ececec;
-    padding: 60px;
-    width: 50%;
+    padding: 20px;
+    position: relative;
+    border: 2px solid #000000;
+    flex-flow: wrap;
+    margin: 5px;
+    /* width: 50%; */
   }
