--- a/src/user/login/LoginSignupContainer.css
+++ b/src/user/login/LoginSignupContainer.css
@@ -42,6 +42,7 @@ h2 {
 
 .center-login-signup-form {
     align-content: center;
+    align-self: center;
     /*margin-left: 10%;*/
 }
 
@@ -110,7 +111,9 @@ input {
 }
 
 .login-signup-container {
+    align-self: center;
     background-color: #fff;
+    border: 2px solid #2098f3;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
     0 10px 10px rgba(0,0,0,0.22);
