[MASTERDIET-60] Update containers for logging in

--- a/src/user/login/LoginSignupContainer.css
+++ b/src/user/login/LoginSignupContainer.css
@@ -42,8 +42,8 @@ h2 {
 
 .center-login-signup-form {
     display: flex;
-    alignItems: center;
-    justifyContent: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .message-panel-left-right {
